--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -32,4 +32,4 @@ jobs:
 
       - name: Run pylint
         run: |
-          app db_models functions model
+          pylint app db_models functions model
